Fix styling of GlobalMessage not aligning to pages and Clean up server side files

--- a/client/src/components/GlobalMessage.css
+++ b/client/src/components/GlobalMessage.css
@@ -1,11 +1,10 @@
 .global-message {
     position: fixed;
-    width: calc(100% - 3.5rem - 11%);
-    margin-left: 3.5rem;
     z-index: 8;
     top: 3rem;
     display: flex;
     justify-content: center;
+    box-sizing: border-box;
 }
 
 .global-message__message {
@@ -18,6 +17,21 @@
     border: 2px solid black;
     box-shadow: 4px 4px black;
     animation: slide-in 15s ease-in-out both;
+}
+
+.arena~.global-message, .forum~.global-message {
+    width: 100%;
+    margin-left: 0;
+}
+
+.post-show~.global-message {
+    width: 89%;
+    margin-left: -3px;
+}
+
+.post-create~.global-message, .post-edit~.global-message, .dashboard~.global-message {
+    width: calc(89% - 3.5rem);
+    margin-left: 3.5rem;
 }
 
 @keyframes slide-in {
@@ -33,20 +47,57 @@
 }
 
 @media screen and (max-width: 1280px) {
-    .global-message {
+    .forum~.global-message {
         width: calc(100% - 3.5rem - 12%);
+        margin-left: calc(3.5rem - 1.5px);
+    }
+    .post-show~.global-message {
+        width: 88%;
+        margin-left: 0;
+    }
+    .post-create~.global-message, .post-edit~.global-message, .dashboard~.global-message {
+        width: calc(88% - 3.5rem);
     }
 }
 
 @media screen and (max-width: 1024px) {
-    .global-message {
+    .forum~.global-message {
         width: calc(100% - 3.5rem - 17%);
+        margin-left: calc(3.5rem + 1.5px);
+    }
+    .post-show~.global-message {
+        width: 83%;
+    }
+    .post-create~.global-message, .post-edit~.global-message, .dashboard~.global-message {
+        width: calc(83% - 3.5rem);
     }
 }
 
 @media screen and (max-width: 767px) {
-    .global-message {
+    .arena~.global-message {
+        width: 75%;
+        margin-left: calc(25% - 1.5rem);
+    }
+    .forum~.global-message {
+        width: calc(100% - 3rem);
+        margin-left: calc(3rem + 3px);
+    }
+    .post-show~.global-message {
+        width: 100%;
+    }
+    .post-create~.global-message, .post-edit~.global-message {
         width: calc(100% - 3rem);
         margin-left: 3rem;
+    }
+    .dashboard~.global-message {
+        width: 100%;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 481px) {
+    .arena~.global-message {
+        width: 77%;
+        margin-left: 23%;
     }
 }
